非同期通信機能の実装しました

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -103,6 +103,7 @@
   height:calc(100vh - 100px - 90px);
   width: calc(100vw - 300px);
   justify-content: flex-start;
+  overflow: scroll;
   &__message{
     padding-top:35px;
     font-size:16px;
@@ -130,6 +131,10 @@
   float:right;
   display: flex;
   align-items: center;
+  .new_message{
+    display: flex;
+    width: 100%;
+  }
   &__imput-form{
     height:50px;
     margin-right:15px;
@@ -138,7 +143,7 @@
     width:100%;
     display:flex;
     position:relative;
-    &__message{
+    .text-form{
       width:100%;
       height:50px;
       #text-content{
@@ -155,7 +160,7 @@
       font-size:1.3rem;
     }
   }
-  &__send{
+  .send-line{
     float:right;
     height:50px;
     margin-right:40px;
