--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -3,7 +3,7 @@
     = @group.name
     .chat-main__group-info__name__member
       member:
-      - @users.each do |user|
+      - @group.users.each do |user|
         = user.name
   .chat-main__group-info__edit
     = link_to "#",class: "under-line" do
@@ -13,16 +13,17 @@
 .chat-main__message-list
   = render @messages
 .chat-main__message-form
-  .chat-main__message-form__imput-form
-    .chat-main__message-form__imput-form__message
-      = form_for [@group, @message] do |f|
-        = f.text_field :content, class: 'text-form', placeholder: 'type a message', id: 'text-content'
-        .chat-main__message-form__imput-form__photo
-          = f.label :image, class: 'input-box__image' do
-            = icon('fas', 'image')
-            = f.file_field :image, class:'none'
-  .chat-main__message-form__send
-    = form_for [@group, @message] do |f|
-      = f.submit 'Send', class: 'send-line' do
-        .chat-main__message-form__send__btn
+  -#   .chat-main__message-form__imput-form__message
+  = form_for [@group, @message] do |f|
+    .chat-main__message-form__imput-form
+      = f.text_field :content, class: 'text-form', placeholder: 'type a message', id: 'text-content'
+      .chat-main__message-form__imput-form__photo
+        = f.label :image, class: 'input-box__image' do
+          = icon('fas', 'image')
+          = f.file_field :image, class:'none'
+    = f.submit 'Send', class: 'send-line'
+  -# .chat-main__message-form__send
+    -# = form_for [@group, @message] do |f|
+    -#   = f.submit 'Send', class: 'send-line' do
+    -#     .chat-main__message-form__send__btn
         
