--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat-main__message-list__message
+.message{data: {message: {id: message.id}}}
   %p.chat-main__message-list__name
     = message.user.name
   %p.chat-main__message-list__name_date
