--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -94,6 +94,9 @@
       font-size:16px;
       color:#38aef0;
     }
+    a{
+      color:#38aef0;
+    }
   }
 }
 
@@ -188,4 +191,7 @@
 .text-form{
   width:100%;
   height:100%;
+}
+a{
+  text-decoration:none;
 }
